Fix scrollbar, figure padding and progress bars

--- a/src/components/pages/Home/Welcome/Welcome.scss
+++ b/src/components/pages/Home/Welcome/Welcome.scss
@@ -131,7 +131,7 @@
         width: 1px;
         height: 55vh;
         background-color: $black_3;
-        right: 4.5rem;
+        right: 3.25rem;
         opacity: 0;
         animation: 
             fade_in 300ms 900ms ease-out forwards,
