--- a/src/components/sharedComponents/ProgressBar/ProgressBar.scss
+++ b/src/components/sharedComponents/ProgressBar/ProgressBar.scss
@@ -5,6 +5,7 @@
 .ProgressBar {
     width: 100%;
     max-width: 600px;
+    height: 80px;
     margin-bottom: 1rem;
     padding: 0.5rem;
     display: flex;
@@ -39,6 +40,8 @@
         display: flex;
         align-items: center;
         color: $white_3;
+        margin: 0;
+        font-size: 1.2rem;
         font-weight: bold;
         white-space: nowrap; /* Prevent the text from wrapping */
         overflow: hidden; /* Hide any overflowing text */
